--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="icon" href="./assets/userAsset/user.webp" type="image/x-icon">
+
 
 </head>
 
@@ -77,10 +79,10 @@
                         <div class="project-subHeading">WanderLust is a travel listing platform where users can discover and book unique accommodations worldwide.</div>
                         <div class="btn-grp">
                             <button class="btn-pink btn-project">Read More</button>
-                            <a href="https://github.com/pintubhamu19/WanderLust.git">
+                            <a target="_blank" href="https://github.com/pintubhamu19/WanderLust.git">
                                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
-                            <a href="https://wanderlust-w44o.onrender.com/listings">
+                            <a target="_blank" href="https://wanderlust-w44o.onrender.com/listings">
                                 <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
                         </div>
@@ -106,10 +108,10 @@
                         <div class="project-subHeading">Shopper‑YAGT is an online retail platform offering a curated range of products at your fingertips.</div>
                         <div class="btn-grp">
                             <button class="btn-pink btn-project">Read More</button>
-                            <a href="https://github.com/pintubhamu19/E-commerce-react.git">
+                            <a target="_blank" href="https://github.com/pintubhamu19/E-commerce-react.git">
                                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
-                            <a href="https://shopper-yagt.onrender.com/">
+                            <a target="_blank" href="https://shopper-yagt.onrender.com/">
                                 <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
                         </div>
@@ -135,10 +137,10 @@
                         <div class="project-subHeading">WeatherApp appears to be a web application designed to display weather data about a city search by user.</div>
                         <div class="btn-grp">
                             <button class="btn-pink btn-project">Read More</button>
-                            <a href="https://github.com/pintubhamu19/WeatherApp.git">
+                            <a target="_blank" href="https://github.com/pintubhamu19/WeatherApp.git">
                                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
-                            <a href="https://weatherapp-2lyi.onrender.com/">
+                            <a target="_blank" href="https://weatherapp-2lyi.onrender.com/">
                                 <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
                         </div>
@@ -262,10 +264,10 @@
                     </div>
 
                     <div class="icon-wrapper">
-                        <a href="https://www.linkedin.com/in/pintu-bhamu-7b62b0257/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin icon"></i></a>
-                        <a href="https://github.com/pintubhamu19"><i class="fa-brands fa-github icon"></i></a>
-                        <a href="https://www.instagram.com/pintu_bhamu_19/"><i class="fa-brands fa-instagram icon"></i></a>
-                        <a href="mailto:yourname@example.com">
+                        <a target="_blank" href="https://www.linkedin.com/in/pintu-bhamu-7b62b0257/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin icon"></i></a>
+                        <a target="_blank" href="https://github.com/pintubhamu19"><i class="fa-brands fa-github icon"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/pintu_bhamu_19/"><i class="fa-brands fa-instagram icon"></i></a>
+                        <a target="_blank" href="mailto:yourname@example.com">
                             <i class="fa-regular fa-envelope icon"></i>
                         </a>
 
